// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification new for comment type it renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "marginBottom": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <NotificationAvatar
      item={
        Object {
          "content": Object {
            "post": Object {
              "author": Object {
                "avatarPath": "",
                "id": "1352fe",
                "name": "E2M",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
              "imagePath": "",
            },
            "reply": Object {
              "author": Object {
                "avatarPath": "",
                "id": "135fad2fe",
                "name": "May",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
            },
            "type": "comment",
          },
          "createdAt": 2019-09-23T00:00:00.000Z,
          "id": "93716ewrs",
          "newNotification": true,
        }
      }
    />
    <NotificationTitle
      item={
        Object {
          "content": Object {
            "post": Object {
              "author": Object {
                "avatarPath": "",
                "id": "1352fe",
                "name": "E2M",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
              "imagePath": "",
            },
            "reply": Object {
              "author": Object {
                "avatarPath": "",
                "id": "135fad2fe",
                "name": "May",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
            },
            "type": "comment",
          },
          "createdAt": 2019-09-23T00:00:00.000Z,
          "id": "93716ewrs",
          "newNotification": true,
        }
      }
    />
  </View>
  <Details
    item={
      Object {
        "content": Object {
          "post": Object {
            "author": Object {
              "avatarPath": "",
              "id": "1352fe",
              "name": "E2M",
            },
            "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
            "createdAt": 2019-09-23T00:00:00.000Z,
            "id": "986sasdfd",
            "imagePath": "",
          },
          "reply": Object {
            "author": Object {
              "avatarPath": "",
              "id": "135fad2fe",
              "name": "May",
            },
            "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
            "createdAt": 2019-09-23T00:00:00.000Z,
            "id": "986sasdfd",
          },
          "type": "comment",
        },
        "createdAt": 2019-09-23T00:00:00.000Z,
        "id": "93716ewrs",
        "newNotification": true,
      }
    }
  />
</TouchableOpacity>
`;

exports[`Notification new for post type it renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "marginBottom": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <NotificationAvatar
      item={
        Object {
          "content": Object {
            "post": Object {
              "author": Object {
                "avatarPath": "",
                "id": "1352fe",
                "name": "E2M",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
              "imagePath": "",
            },
            "reply": null,
            "type": "post",
          },
          "createdAt": 2019-09-23T00:00:00.000Z,
          "id": "93716ewrs",
          "newNotification": true,
        }
      }
    />
    <NotificationTitle
      item={
        Object {
          "content": Object {
            "post": Object {
              "author": Object {
                "avatarPath": "",
                "id": "1352fe",
                "name": "E2M",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
              "imagePath": "",
            },
            "reply": null,
            "type": "post",
          },
          "createdAt": 2019-09-23T00:00:00.000Z,
          "id": "93716ewrs",
          "newNotification": true,
        }
      }
    />
  </View>
  <Details
    item={
      Object {
        "content": Object {
          "post": Object {
            "author": Object {
              "avatarPath": "",
              "id": "1352fe",
              "name": "E2M",
            },
            "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
            "createdAt": 2019-09-23T00:00:00.000Z,
            "id": "986sasdfd",
            "imagePath": "",
          },
          "reply": null,
          "type": "post",
        },
        "createdAt": 2019-09-23T00:00:00.000Z,
        "id": "93716ewrs",
        "newNotification": true,
      }
    }
  />
</TouchableOpacity>
`;

exports[`Notification old for comment type it renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "marginBottom": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <NotificationAvatar
      item={
        Object {
          "content": Object {
            "post": Object {
              "author": Object {
                "avatarPath": "",
                "id": "1352fe",
                "name": "E2M",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
              "imagePath": "",
            },
            "reply": Object {
              "author": Object {
                "avatarPath": "",
                "id": "135fad2fe",
                "name": "May",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
            },
            "type": "comment",
          },
          "createdAt": 2019-09-23T00:00:00.000Z,
          "id": "93716ewrs",
          "newNotification": false,
        }
      }
    />
    <NotificationTitle
      item={
        Object {
          "content": Object {
            "post": Object {
              "author": Object {
                "avatarPath": "",
                "id": "1352fe",
                "name": "E2M",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
              "imagePath": "",
            },
            "reply": Object {
              "author": Object {
                "avatarPath": "",
                "id": "135fad2fe",
                "name": "May",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
            },
            "type": "comment",
          },
          "createdAt": 2019-09-23T00:00:00.000Z,
          "id": "93716ewrs",
          "newNotification": false,
        }
      }
    />
  </View>
  <Details
    item={
      Object {
        "content": Object {
          "post": Object {
            "author": Object {
              "avatarPath": "",
              "id": "1352fe",
              "name": "E2M",
            },
            "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
            "createdAt": 2019-09-23T00:00:00.000Z,
            "id": "986sasdfd",
            "imagePath": "",
          },
          "reply": Object {
            "author": Object {
              "avatarPath": "",
              "id": "135fad2fe",
              "name": "May",
            },
            "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
            "createdAt": 2019-09-23T00:00:00.000Z,
            "id": "986sasdfd",
          },
          "type": "comment",
        },
        "createdAt": 2019-09-23T00:00:00.000Z,
        "id": "93716ewrs",
        "newNotification": false,
      }
    }
  />
</TouchableOpacity>
`;

exports[`Notification old for post type it renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "marginBottom": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <NotificationAvatar
      item={
        Object {
          "content": Object {
            "post": Object {
              "author": Object {
                "avatarPath": "",
                "id": "1352fe",
                "name": "E2M",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
              "imagePath": "",
            },
            "reply": null,
            "type": "post",
          },
          "createdAt": 2019-09-23T00:00:00.000Z,
          "id": "93716ewrs",
          "newNotification": true,
        }
      }
    />
    <NotificationTitle
      item={
        Object {
          "content": Object {
            "post": Object {
              "author": Object {
                "avatarPath": "",
                "id": "1352fe",
                "name": "E2M",
              },
              "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
              "createdAt": 2019-09-23T00:00:00.000Z,
              "id": "986sasdfd",
              "imagePath": "",
            },
            "reply": null,
            "type": "post",
          },
          "createdAt": 2019-09-23T00:00:00.000Z,
          "id": "93716ewrs",
          "newNotification": true,
        }
      }
    />
  </View>
  <Details
    item={
      Object {
        "content": Object {
          "post": Object {
            "author": Object {
              "avatarPath": "",
              "id": "1352fe",
              "name": "E2M",
            },
            "content": "Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.",
            "createdAt": 2019-09-23T00:00:00.000Z,
            "id": "986sasdfd",
            "imagePath": "",
          },
          "reply": null,
          "type": "post",
        },
        "createdAt": 2019-09-23T00:00:00.000Z,
        "id": "93716ewrs",
        "newNotification": true,
      }
    }
  />
</TouchableOpacity>
`;
